--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -81,7 +81,7 @@
                                             <div class="input-group-prepend">
                                                 <button class="decrement-qty btn btn-outline-info"
                                                 data-item_id="{{ product.id }}" id="decrement-qty_{{ product.id }}">
-                                                    <span class="icon">
+                                                    <span>
                                                         <i class="fas fa-minus"></i>
                                                     </span>
                                                 </button>
@@ -90,7 +90,7 @@
                                             <div class="input-group-append">
                                                 <button class="increment-qty btn btn-outline-info" data-item_id="{{ product.id }}"
                                                 id="increment-qty_{{ product.id }}">
-                                                    <span class="icon">
+                                                    <span>
                                                         <i class="fas fa-plus"></i>
                                                     </span>
                                                 </button>                                                 
