--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -19,9 +19,7 @@
 
 <div class="container-fluid row">
     <div class="rounded my-4 bag-main-div col-10 offset-1 bg-light">
-
-        <!-- products header -->
-        <div class="row">
+         <div class="row">
             <div class="col-10 offset-1 text-start mt-2">
                 <h2 class="d-none d-sm-block">Your Shopping Bag:</h2>
                 <h4 class="d-sm-none" >Your Shopping Bag:</h4>
@@ -29,7 +27,7 @@
         </div>
         <hr class="w-100 mb-1">
 
-            <!-- USE THIS TABLE AS TEMPLATEEEEEE -->
+        <!-- product table -->
         {% if bag_products %}
         <div class="table-responsive">
             <table class="table align-middle table-hover">
@@ -39,7 +37,7 @@
                         <th scope="col"></th>
                         <th scope="col">Price</th>
                         <th scope="col">Quantity</th>
-                        <th scope="col"><span class="small text-muted">Rounded </span>SubTot</th>
+                        <th scope="col">SubTot</th>
                     </tr>
                 </thead>
                 {% for product in bag_products %}
@@ -50,17 +48,59 @@
                         </td>
                         <td class="align-top">
                             <p class="mt-0">{{ product.product.name }}</p>
-                            <p class="mt-0 {% if product.product.has_size != True %}d-none{% endif %}">Size: {{ product.size|upper }}</p>
+                            <p class="mt-0
+                            {% if product.product.has_sizes != True %}d-none{% endif %}">Size: {{ product.size|upper }}</p>
                             <p class="mt-0 small text-muted">Product code:{{ product.product.pk }}</p>
                         </td>
                         <td class="align-top">
                             <p class="py-2">€{{ product.product.price }}</p>
                         </td>
-                        <td class="align-top">
-                            <p class="py-2">{{ product.quantity }}</p>
+                        <td class="align-top w-25">
+                            <form class="form update-form" method="POST" action="">
+                                {% csrf_token %}
+                                <!-- quantity selector -->
+                                <div class="col-12">
+                                    <p class="mt-3"><strong>Quantity:</strong></p>
+                                    <div class="form-group w-100">
+                                        <div class="input-group">
+                                            <!-- quantity number -->
+                                            <input class="form-control form-control-sm qty_input" type="number"
+                                            name="quantity" value="{{ product.quantity }}" min="1" max="99"
+                                            data-item_id="{{ product.item_id }}"
+                                            id="id_qty_{{ product.item_id }}">
+                                            <!-- minus button -->
+                                            <div class="input-group-prepend">
+                                                <button class="decrement-qty btn btn-sm btn-outline-info"
+                                                data-item_id="{{ product.item_id }}" id="decrement-qty_{{ product.item_id }}">
+                                                    <span>
+                                                        <i class="fas fa-minus fa-sm"></i>
+                                                    </span>
+                                                </button>
+                                            </div>
+                                            <!-- plus button -->
+                                            <div class="input-group-append">
+                                                <button class="increment-qty btn btn-sm btn-outline-info"
+                                                data-item_id="{{ product.item_id }}"
+                                                id="increment-qty_{{ product.item_id }}">
+                                                    <span>
+                                                        <i class="fas fa-plus fa-sm"></i>
+                                                    </span>
+                                                </button>                                                 
+                                            </div>
+                                            {% if product.product.has_sizes %}
+                                            <input type="hidden" name="product_size" value="{{ product.size }}">
+                                            {% endif %}
+                                        </div>
+                                    </div>
+                                </div>
+                            </form>
+                            <!-- update/remove buttons -->
+                            <a class="update-link text-info small">Update</a>
+                            <a class="remove-link text-danger small float-end" id="remove_{{ product.item_id }}"
+                            data-size="{ product.size}">Remove</a>
                         </td>
                         <td class="align-top">
-                            <p class="py-2 text-muted">€{{ subtotal }}</p> 
+                            <p class="py-2">€{{ product.product.price }}</p>
                         </td>
                     </tr>
                 </tbody>
@@ -81,7 +121,7 @@
                             <span>Continue shopping</span>
                         </a>
                         <!-- CHECK MARGIN TOP -->
-                        <a href="{% url 'products' %}" class="my-2 mt-sm-0 btn btn-outline-dark">
+                        <a href="{% url 'products' %}" class="my-2 my-sm-0 btn btn-outline-dark">
                             <span class="icon">
                                 <i class="fas fa-lock"></i>
                             </span>
@@ -104,4 +144,31 @@
         {% endif %}
     </div>
 </div>
+{% endblock %}
+
+{% block postloadjs %}
+{{ block.super }}
+{% include 'products/includes/qty_input_js.html' %}
+
+<script type="text/javascript">
+    // Update quantity on click
+    $('.update-link').click(function(e) {
+        var form = $(this).prev('.update-form');
+        form.submit();
+    })
+
+    // Remove item and reload on click
+    $('.remove-item').click(function(e) {
+        var csrfToken = "{{ csrf_token }}";
+        var itemId = $(this).attr('id').split('remove_')[1];
+        var size = $(this).data('size');
+        var url = `/bag/remove/${itemId}`;
+        var data = {'csrfmiddlewaretoken': csrfToken, 'size': size};
+
+        $.post(url, data)
+         .done(function() {
+             location.reload();
+         });
+    })
+</script>
 {% endblock %}
