--- a/static/css/base.css
+++ b/static/css/base.css
@@ -170,6 +170,10 @@ transition: 0.4s;
     color: black;
 }
 
+.btt-link, .update-link, .remove-link {
+    cursor: pointer;
+}
+
 
 /* media responsiveness */
 
