--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -63,25 +63,26 @@
                                     <p class="mt-3"><strong>Quantity:</strong></p>
                                     <div class="form-group w-100">
                                         <div class="input-group">
-                                            <!-- quantity number -->
-                                            <input class="form-control form-control-sm qty_input" type="number"
-                                            name="quantity" value="{{ product.quantity }}" min="1" max="99"
-                                            data-item_id="{{ product.item_id }}"
-                                            id="id_qty_{{ product.item_id }}">
+                                            
                                             <!-- minus button -->
                                             <div class="input-group-prepend">
                                                 <button class="decrement-qty btn btn-sm btn-outline-info"
-                                                data-item_id="{{ product.item_id }}" id="decrement-qty_{{ product.item_id }}">
+                                                data-product_id="{{ product.product_id }}" id="decrement-qty_{{ product.product_id }}">
                                                     <span>
                                                         <i class="fas fa-minus fa-sm"></i>
                                                     </span>
                                                 </button>
                                             </div>
+                                            <!-- quantity number -->
+                                            <input class="form-control form-control-sm qty_input" type="number"
+                                            name="quantity" value="{{ product.quantity }}" min="1" max="99"
+                                            data-product_id="{{ product.product_id }}"
+                                            id="id_qty_{{ product.product_id }}">
                                             <!-- plus button -->
                                             <div class="input-group-append">
                                                 <button class="increment-qty btn btn-sm btn-outline-info"
-                                                data-item_id="{{ product.item_id }}"
-                                                id="increment-qty_{{ product.item_id }}">
+                                                data-product_id="{{ product.product_id }}"
+                                                id="increment-qty_{{ product.product_id }}">
                                                     <span>
                                                         <i class="fas fa-plus fa-sm"></i>
                                                     </span>
@@ -96,8 +97,8 @@
                             </form>
                             <!-- update/remove buttons -->
                             <a class="update-link text-info small">Update</a>
-                            <a class="remove-link text-danger small float-end" id="remove_{{ product.item_id }}"
-                            data-size="{ product.size}">Remove</a>
+                            <a class="remove-item text-danger small float-end" id="remove_{{ product.product_id }}"
+                            data-size="{ product.size }">Remove</a>
                         </td>
                         <td class="align-top">
                             <p class="py-2">€{{ product.product.price }}</p>
@@ -162,7 +163,7 @@
         var csrfToken = "{{ csrf_token }}";
         var itemId = $(this).attr('id').split('remove_')[1];
         var size = $(this).data('size');
-        var url = `/bag/remove/${itemId}`;
+        var url = `/bag/remove/${itemId}/`;
         var data = {'csrfmiddlewaretoken': csrfToken, 'size': size};
 
         $.post(url, data)
