--- a/products/templates/products/includes/qty_input_js.html
+++ b/products/templates/products/includes/qty_input_js.html
@@ -12,13 +12,13 @@
     // Ensure proper enabling/disabling of all inputs on page load
     var allQtyInputs = $('.qty_input');
     for(var i = 0; i < allQtyInputs.length; i++){
-        var itemId = $(allQtyInputs[i]).data('item_id');
+        var itemId = $(allQtyInputs[i]).data('product_id');
         handleEnableDisable(itemId);
     }
 
     // Check enable/disable every time the input is changed
     $('.qty_input').change(function() {
-        var itemId = $(this).data('item_id');
+        var itemId = $(this).data('product_id');
         handleEnableDisable(itemId);
     });
 
@@ -28,7 +28,7 @@
        var closestInput = $(this).closest('.input-group').find('.qty_input')[0];
        var currentValue = parseInt($(closestInput).val());
        $(closestInput).val(currentValue + 1);
-       var itemId = $(this).data('item_id');
+       var itemId = $(this).data('product_id');
        handleEnableDisable(itemId);
     });
 
@@ -38,7 +38,7 @@
        var closestInput = $(this).closest('.input-group').find('.qty_input')[0];
        var currentValue = parseInt($(closestInput).val());
        $(closestInput).val(currentValue - 1);
-       var itemId = $(this).data('item_id');
+       var itemId = $(this).data('product_id');
        handleEnableDisable(itemId);
     });
 </script>
