--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -75,12 +75,12 @@
                                         <div class="input-group">
                                             <!-- quantity number -->
                                             <input class="form-control qty_input" type="number"
-                                            name="quantity" value="1" min="1" max="99" data-item_id="{{ product.id }}"
+                                            name="quantity" value="1" min="1" max="99" data-product_id="{{ product.id }}"
                                             id="id_qty_{{ product.id }}">
                                             <!-- minus button -->
                                             <div class="input-group-prepend">
                                                 <button class="decrement-qty btn btn-outline-info"
-                                                data-item_id="{{ product.id }}" id="decrement-qty_{{ product.id }}">
+                                                data-product_id="{{ product.id }}" id="decrement-qty_{{ product.id }}">
                                                     <span>
                                                         <i class="fas fa-minus"></i>
                                                     </span>
@@ -88,7 +88,7 @@
                                             </div>
                                             <!-- plus button -->
                                             <div class="input-group-append">
-                                                <button class="increment-qty btn btn-outline-info" data-item_id="{{ product.id }}"
+                                                <button class="increment-qty btn btn-outline-info" data-product_id="{{ product.id }}"
                                                 id="increment-qty_{{ product.id }}">
                                                     <span>
                                                         <i class="fas fa-plus"></i>
