--- a/static/css/base.css
+++ b/static/css/base.css
@@ -170,7 +170,7 @@ transition: 0.4s;
     color: black;
 }
 
-.btt-link, .update-link, .remove-link {
+.update-link, .remove-item {
     cursor: pointer;
 }
 
