updated login logout and signup page

--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -21,7 +21,7 @@
 <div class="container-fluid row">
     <div class="rounded my-4 bag-main-div col-10 offset-1 bg-light">
          <div class="row">
-            <div class="col-10 offset-1 text-start mt-2">
+            <div class="col-12 text-start mt-2">
                 <h2 class="d-none d-sm-block">Your Shopping Bag:</h2>
                 <h4 class="d-sm-none" >Your Shopping Bag:</h4>
             </div>
