--- a/templates/base.html
+++ b/templates/base.html
@@ -56,7 +56,7 @@
                             <a class="nav-link link-exp underline-transition" href="{% url 'products' %}">Shop</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link link-exp underline-transition" aria-current="page" href="/">Info</a>
+                            <a class="nav-link link-exp underline-transition" aria-current="page" href="{% url 'info' %}">Info</a>
                         </li>
                         {% if user.is_authenticated %}
                             <li class="nav-item user-link-top">
