--- a/info/templates/info/info.html
+++ b/info/templates/info/info.html
@@ -11,11 +11,12 @@
                 <div class="row g-0 p-5">
                     <section class="mb-4">
                         <h2 class="h1-responsive font-weight-bold text-center my-4">Contact us</h2>
-                        <p class="text-center w-responsive mx-auto mb-5">Do you have any questions? Please do not hesitate to contact us directly. Our team will come back to you within
+                        <p class="text-start w-responsive mx-auto mb-5">Do you have any questions? Please do not hesitate to contact us directly. Our team will come back to you within
                             a matter of hours to help you.</p>
                         <div class="row">
                             <div class="col-md-9 mb-md-0 mb-5">
                                 <form id="contact-form" name="contact-form" action="" method="POST">
+                                    {% csrf_token %}
                                     <div class="row">
                                         <div class="col-md-6">
                                             <div class="md-form mb-0">
