--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -1,7 +1,8 @@
 <div class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+    <div class="toast-capper bg-success w-100">
     <div class="toast-header bg-white text-black">
         <img src="" class="rounded me-2" alt="">
-        <strong class="me-auto">MotiGym</strong>
+        <strong class="mr-auto">Success</strong>
         <small>aria-hidden="true">&times;</small>
         <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close"></button>
     </div>
