--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -1,3 +1,4 @@
+<!-- toast success -->
 <div class="toast" role="alert" aria-live="assertive" aria-atomic="true">
     <div class="toast-capper bg-success w-100">
     <div class="toast-header bg-white text-black">
