--- a/templates/base.html
+++ b/templates/base.html
@@ -115,6 +115,9 @@
             {% endblock %}
 
             {% block postloadjs %}
+            <script type="text/javascript">
+                $('.toast').toast('show');
+            </script>
             {% endblock %}
         </div> 
     </section>
