changed toasts html and currently fixing toast bug, js not working

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -182,7 +182,11 @@ padding-top: 2px;
     position: fixed;
     top: 75px;
     right: 10px;
-    z-index: 10;
+    z-index: 99999999999;
+}
+
+.custom-toast{
+    overflow: visible;
 }
 
 .toast-capper{
