--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -81,18 +81,14 @@
                                             <div class="input-group-prepend">
                                                 <button class="decrement-qty btn btn-outline-info"
                                                 data-product_id="{{ product.id }}" id="decrement-qty_{{ product.id }}">
-                                                    <span>
-                                                        <i class="fas fa-minus"></i>
-                                                    </span>
+                                                    <span><i class="fas fa-minus"></i></span>
                                                 </button>
                                             </div>
                                             <!-- plus button -->
                                             <div class="input-group-append">
                                                 <button class="increment-qty btn btn-outline-info" data-product_id="{{ product.id }}"
                                                 id="increment-qty_{{ product.id }}">
-                                                    <span>
-                                                        <i class="fas fa-plus"></i>
-                                                    </span>
+                                                    <span><i class="fas fa-plus"></i></span>
                                                 </button>                                                 
                                             </div>
                                         </div>
