--- a/templates/includes/toasts/toast_warning.html
+++ b/templates/includes/toasts/toast_warning.html
@@ -1,10 +1,10 @@
 <!-- toast Warning -->
-<div class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+<div class="toast custom-toast rounded" delay="3000">
     <div class="toast-capper bg-warning w-100">
     <div class="toast-header bg-white text-black">
         <img src="" class="rounded me-2" alt="">
-        <strong class="mr-auto">Warning!</strong>
-        <small>aria-hidden="true">&times;</small>
+        <strong class="mr-auto">Warning</strong>
+        <span class="small" aria-hidden="true">&times;</span>
         <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close"></button>
     </div>
     <div class="toast-body">
