fixed toast bug, typo in {{product.size}}

--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -101,7 +101,7 @@
                                 <i class="fas fa-sync-alt"></i>
                             </a>
                             <a class="remove-item text-danger small float-md-end text-decoration-none" id="remove_{{ product.product_id }}"
-                            data-product_size="{ product.size }">Remove
+                            data-product_size="{{ product.size }}">Remove
                                 <i class="fas fa-trash-alt"></i>
                             </a>
                         </td>
