--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -144,7 +144,7 @@
                 <span>
                     <i class="fas fa-chevron-left"></i>
                 </span>
-                <span>Keep shopping</span>
+                <span>Continue shopping</span>
             </a>
         </div>
         {% endif %}
