--- a/templates/includes/toasts/toast_error.html
+++ b/templates/includes/toasts/toast_error.html
@@ -1,13 +1,14 @@
 <!-- toast Error -->
-<div class="toast custom-toast rounded" delay="3000">
+<div class="toast custom-toast rounded" data-autohide="false">
     <div class="toast-capper bg-error w-100">
-    <div class="toast-header bg-white text-black">
-        <img src="" class="rounded me-2" alt="">
-        <strong class="mr-auto">Error</strong>
-        <span class="small" aria-hidden="true">&times;</span>
-        <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close"></button>
+        <div class="toast-header bg-white text-black">
+            <img src="" class="rounded me-2" alt="">
+            <strong class="mr-auto">Error</strong>
+            <span class="small" aria-hidden="true">&times;</span>
+            <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close"></button>
+        </div>
+        <div class="toast-body">
+            {{ message }}
+        </div>
     </div>
-    <div class="toast-body">
-        {{ message }}
-  </div>
 </div>
