--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -1,13 +1,13 @@
 <!-- toast success -->
-<div class="toast custom-toast rounded" delay="3000">
-    <div class="toast-capper bg-success w-100">
-    <div class="toast-header bg-white text-black">
-        <img src="" class="rounded me-2" alt="">
+<div class="toast custom-toast rounded">
+    <div class="toast-capper bg-success w-100"></div>
+    <div class="toast-header bg-white text-dark">
         <strong class="mr-auto">Success</strong>
-        <span class="small" aria-hidden="true">&times;</span>
-        <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close"></button>
+        <button type="button" class="ml-2 mb-1 close text-dark" data-dismiss="toast" aria-label="Close">
+            <span class="small" aria-hidden="true">&times;</span>
+        </button>
     </div>
     <div class="toast-body">
         {{ message }}
-  </div>
+    </div>
 </div>
