--- a/static/css/base.css
+++ b/static/css/base.css
@@ -186,31 +186,18 @@ transition: 0.4s;
     right: 10px;
     z-index: 99999999999;
 }
-/* 
+
 .custom-toast{
     overflow: visible;
-    opacity: 100!important;
-    background-color: white!important;
-} */
+}
 
 .toast-capper{
-    height: 5px;
+    height: 2px;
 }
 
-/* .toast {
-    box-shadow: 0.1rem 0.1rem 0.1rem #A3A3A3; 
+.toast {
+    box-shadow: 2px 2px 2px #9e9e9e; 
 }
-.toast-header {
-    color: #FFFFD9;
-    background-color: #971328;
-} */
-
-/* .toast-message-control {
-    font-weight: 600;
-    text-transform: uppercase;
-    color: #0f0f0f;
-    background-color: #FFFFD9;
-} */
 
 /* media responsiveness */
 
