--- a/templates/includes/toasts/toast_info.html
+++ b/templates/includes/toasts/toast_info.html
@@ -1,14 +1,11 @@
 <!-- toast info -->
-<div class="toast custom-toast rounded" data-autohide="false">
-    <div class="toast-capper bg-info w-100">
-        <div class="toast-header bg-white text-black">
-            <img src="" class="rounded me-2" alt="">
-            <strong class="mr-auto">Info</strong>
-            <span class="small" aria-hidden="true">&times;</span>
-            <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close"></button>
-        </div>
-        <div class="toast-body">
-            {{ message }}
-        </div>
+<div role="alert" aria-live="assertive" aria-atomic="true" class="toast custom-toast rounded" data-bs-autohide="false">
+    <div class="toast-header">
+      <strong class="me-auto">Info </strong>
+      <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+    </div>
+    <div class="toast-capper bg-info w-100"></div>
+    <div class="toast-body text-dark bg-white rounded">
+        {{ message }}
     </div>
 </div>
