added toast notifications messages in views.py bag

--- a/templates/includes/toasts/toast_error.html
+++ b/templates/includes/toasts/toast_error.html
@@ -4,7 +4,7 @@
       <strong class="me-auto">Error </strong>
       <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
     </div>
-    <div class="toast-capper bg-error w-100"></div>
+    <div class="toast-capper bg-danger w-100"></div>
     <div class="toast-body text-dark bg-white rounded">
         {{ message }}
     </div>
