migrate new field column in membership to add more descriptions

--- a/memberships/templates/memberships/membership_detail.html
+++ b/memberships/templates/memberships/membership_detail.html
@@ -58,7 +58,7 @@
                             <p class="my-2"><span class="lg-font font-mb">€{{ membership.price }}</span>/month</p>
                             <hr class="w-100 my-1">
                             <p class="sm-font">{{ membership.description }}</p>
-                            <p class="sm-font">{{ membership.description }}</p>
+                            <!-- CHANGE INTO TEXT!!!! -->
                             <p class="sm-font">{{ membership.description }}</p>
                             <a href="{% url 'memberships' %}" class="btn btn-outline-dark">Back</a>
                         </div>
