--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -18,8 +18,8 @@
 
 <!-- bag header -->
 
-<div class="container-fluid row">
-    <div class="rounded my-4 bag-main-div col-10 offset-1 bg-light">
+<div class="container-fluid row g-0">
+    <div class="rounded my-4 bag-main-div col-10 offset-1 bg-light p-2">
          <div class="row">
             <div class="col-12 text-start mt-2">
                 <h2 class="d-none d-sm-block">Your Shopping Bag:</h2>
