changing bag table to divs

--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -29,6 +29,7 @@
         <hr class="w-100 mb-1">
 
         <!-- product table -->
+        <!-- TO BE UPDATED TO DIVS NOT RESPONSIVE -->
         {% if bag_products %}
         <div class="table-responsive">
             <table class="table align-middle table-hover">
