--- a/info/templates/info/info.html
+++ b/info/templates/info/info.html
@@ -7,8 +7,8 @@
     <div class="rounded my-4 prd-main-div col-10 offset-1 bg-light">
 
         <div class="row">
-            <div class="col-lg-10 offset-lg-1 col-12 mb-4">
-                <div class="row g-0 p-5">
+            <div class="col-lg-10 offset-lg-1 col-12">
+                <div class="row g-0 px-3 py-2 p-md-5">
                     <section class="mb-4">
                         <h2 class="h1-responsive font-weight-bold text-center my-4">Contact us</h2>
                         <p class="text-start w-responsive mx-auto mb-5">Do you have any questions? Please do not hesitate to contact us directly. Our team will come back to you within
@@ -20,35 +20,35 @@
                                     <div class="row">
                                         <div class="col-md-6">
                                             <div class="md-form mb-0">
+                                                <label for="name" class="">Your name:</label>
                                                 <input type="text" id="name" name="name" class="form-control">
-                                                <label for="name" class="">Your name</label>
                                             </div>
                                         </div>
                                         <div class="col-md-6">
                                             <div class="md-form mb-0">
+                                                <label for="email" class="">Your email:</label>
                                                 <input type="text" id="email" name="email" class="form-control">
-                                                <label for="email" class="">Your email</label>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="row">
                                         <div class="col-md-12">
                                             <div class="md-form mb-0">
+                                                <label for="subject" class="">Subject:</label>
                                                 <input type="text" id="subject" name="subject" class="form-control">
-                                                <label for="subject" class="">Subject</label>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="row">
                                         <div class="col-md-12">
                                             <div class="md-form">
+                                                <label for="message">Your message:</label>
                                                 <textarea type="text" id="message" name="message" rows="2" class="form-control md-textarea"></textarea>
-                                                <label for="message">Your message</label>
                                             </div>
                                         </div>
                                     </div>
                                 </form>
-                                <div class="text-center text-md-left">
+                                <div class="text-center mt-4">
                                     <a class="btn btn-primary" onclick="document.getElementById('contact-form').submit();">Send</a>
                                 </div>
                                 <div class="status"></div>
