--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -27,9 +27,10 @@
         <!-- products cards -->
         <div class="row">
             <div class="col-lg-10 offset-lg-1 col-12 mb-4">
-                <div class="row g-0">
+                <div class="row g-0 p-1">
                 {% for product in products %}
-                    <div class="col-6 col-md-4 col-xl-3 my-3 rounded bg-product px-1">
+                <div class="p-1 col-6 col-md-4 col-xl-3 my-3">
+                    <div class="rounded bg-white">
                         <a href="{% url 'product_detail' product.id %}" class="text-reset text-decoration-none">
                             <div class=" mt-2">
 
@@ -51,7 +52,7 @@
                             </div>
                         </a>    
                     </div>
-                   
+                </div>
                 {% endfor %} 
                 </div>
             </div>
