--- a/static/css/base.css
+++ b/static/css/base.css
@@ -49,12 +49,6 @@ body{
     padding-left:0.75rem;
 }
 
-/* bag */
-
-.small-prd-img{
-    width: 80%;
-}
-
 /* main section */
 
 .main-section{
@@ -87,6 +81,10 @@ body{
   margin: auto;
   width: 60%;
   padding-top: 32vh;
+}
+
+.container-max-width{
+    max-width: 1500px;
 }
 
 /* membership  */
@@ -176,6 +174,10 @@ transition: 0.4s;
 
 .remove-item{
     padding-top: 2px;
+}
+
+.small-prd-img{
+    width: 80%;
 }
 
 /* toasts */
